@@ -14,7 +14,7 @@ DESIGN
 - is there a maximum amount of solute that the shaker can dispense?
 
 HIGH
-- move origin of dropper to hole that dispenses stock solution
+- fix dropper button, doesn't disable when beaker is full
 - move shaker location to holes in shaker image
 - move developer display to a dialog, add a button to access
 - view of solute exiting shaker
