@@ -82,7 +82,7 @@ public class ConcentrationModel implements Resettable {
         this.solute = new Property<Solute>( solutes.get( 0 ) );
         this.solution = new Solution( solute, SOLUTE_AMOUNT_RANGE.getDefault(), SOLUTION_VOLUME_RANGE.getDefault() );
         this.shaker = new Shaker( new ImmutableVector2D( 250, 20 ), new PBounds( 10, 10, 400, 200 ), solute, SHAKER_MAX_DISPENSING_RATE );
-        this.dropper = new Dropper( new ImmutableVector2D( 290, 20 ), new PBounds( 10, 10, 400, 200 ), solute, DROPPER_FLOW_RATE );
+        this.dropper = new Dropper( new ImmutableVector2D( 375, 210 ), new PBounds( 230, 205, 250, 50 ), solute, DROPPER_FLOW_RATE );
         this.evaporationRate = new Property<Double>( 0d );
         this.beaker = new Beaker( new Point2D.Double( 400, 550 ), new PDimension( 600, 300 ), SOLUTION_VOLUME_RANGE.getMax() );
         this.inputFaucet = new Faucet( new Point2D.Double( 50, 30 ), 1000, MAX_INPUT_FLOW_RATE ); //TODO derive location and pipe length
